tests/baselines/reference/twoInterfacesDifferentRootModule.errors.txt
twoInterfacesDifferentRootModule.ts(19,14): error TS2454: Variable 'a' is used before being assigned.
twoInterfacesDifferentRootModule.ts(19,16): error TS2339: Property 'foo' does not exist on type 'A'.
twoInterfacesDifferentRootModule.ts(20,14): error TS2454: Variable 'a' is used before being assigned.
twoInterfacesDifferentRootModule.ts(27,14): error TS2454: Variable 'b' is used before being assigned.
twoInterfacesDifferentRootModule.ts(27,16): error TS2339: Property 'foo' does not exist on type 'B<string>'.
twoInterfacesDifferentRootModule.ts(28,14): error TS2454: Variable 'b' is used before being assigned.


==== twoInterfacesDifferentRootModule.ts (6 errors) ====
    // two interfaces with different root modules should not merge
    
    module M {
        export interface A {
            foo: string;
        }
    
        export interface B<T> {
            foo: T;
        }
    }
    
    module M2 {
        export interface A {
            bar: number;
        }
    
        var a: A;
        var r1 = a.foo; // error
                 ~
!!! error TS2454: Variable 'a' is used before being assigned.
                   ~~~
!!! error TS2339: Property 'foo' does not exist on type 'A'.
        var r2 = a.bar; 
                 ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
        export interface B<T> {
            bar: T;
        }
    
        var b: B<string>;
        var r3 = b.foo; // error
                 ~
!!! error TS2454: Variable 'b' is used before being assigned.
                   ~~~
!!! error TS2339: Property 'foo' does not exist on type 'B<string>'.
        var r4 = b.bar; 
                 ~
!!! error TS2454: Variable 'b' is used before being assigned.
    }